refactoring and removing modal dialog

--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -106,7 +106,7 @@
   </p-card>
 
   <p-card *ngIf="currentSelection == 'gantt'">
-    <app-gantt-chart [schedules]="ganttEntities"></app-gantt-chart>
+    <app-gantt-chart *ngIf="ganttEntities" [schedules]="ganttEntities"></app-gantt-chart>
   </p-card>
 
   <p-card *ngIf="currentSelection == 'jobeditor'">
