--- a/src/app/scheduler/job-editor/job-editor.component.css
+++ b/src/app/scheduler/job-editor/job-editor.component.css
@@ -34,6 +34,11 @@ p-picklist {
     background-color: #4363d8;
 }
 
+::ng-deep #lateJobs .ui-slider-range {
+    background-color: #cc43d8;
+}
+
+
 ::ng-deep .ui-steps .ui-steps-item {
     width: 33%;
 }
