--- a/src/app/scheduler/job-editor/job-editor.component.html
+++ b/src/app/scheduler/job-editor/job-editor.component.html
@@ -21,27 +21,36 @@
   </p-pickList>
 </div>
 <div *ngIf="activeIndex == 1">
-  <div class="h5">Objective priorities</div>
-  <small>Makespan {{makespan}}%</small>
-  <p-slider id="makespan" class="m-2" [(ngModel)]="makespan" [min]="0" [max]="100"></p-slider>
 
-  <h2></h2>
-  <small>Number of Setups {{setups}}%</small>
-  <p-slider id="setups" class="m-2" [(ngModel)]="setups" [min]="0" [max]="100"></p-slider>
+  <p-panel header="Objective priorities">
+    <small>Makespan {{makespan}}%</small>
+    <p-slider id="makespan" class="m-2" [(ngModel)]="makespan" [min]="0" [max]="100"></p-slider>
 
-  <h2></h2>
-  <small>Setup time {{setupTime}}%</small>
-  <p-slider id="setupTime" class="m-2" [(ngModel)]="setupTime" [min]="0" [max]="100"></p-slider>
+    <h2></h2>
+    <small>Number of Setups {{setups}}%</small>
+    <p-slider id="setups" class="m-2" [(ngModel)]="setups" [min]="0" [max]="100"></p-slider>
 
-  <div class="d-flex flex-column m-2">
-    <div>Scheduling description</div>
-    <input type="text" style="width:300px" [(ngModel)]="description">
-    <div>Number of enities in the population</div>
-    <input type="number" style="width:50px" [(ngModel)]="population">
-    <div>Number of iterations</div>
-    <input type="number" style="width:50px" [(ngModel)]="iteration">
-  </div>
+    <h2></h2>
+    <small>Setup time {{setupTime}}%</small>
+    <p-slider id="setupTime" class="m-2" [(ngModel)]="setupTime" [min]="0" [max]="100"></p-slider>
+
+    <h2></h2>
+    <small>Late jobs {{lateJobs}}%</small>
+    <p-slider id="lateJobs" class="m-2" [(ngModel)]="lateJobs" [min]="0" [max]="100"></p-slider>
+  </p-panel>
+
+  <div class="mb-2"></div>
+
+  <p-panel header="Advanced settings">
+    <div class="d-flex flex-column">
+      <div>Number of enities in the population</div>
+      <input type="number" style="width:50px" [(ngModel)]="population">
+      <div>Number of iterations</div>
+      <input type="number" style="width:50px" [(ngModel)]="iteration">
+    </div>
+  </p-panel>
 </div>
+
 <div *ngIf="activeIndex == 2">
   <div>
     <p-chart #chart type="line" [data]="data" [options]="options"></p-chart>
@@ -64,11 +73,17 @@
   <div class="d-flex flex-column">
     <button type="button" class="btn btn-sm btn-outline-success mb-2 mt-2" (click)="schedule()">Optimize
       scheduling</button>
-    <button type="button" class="btn btn-sm btn-outline-info" (click)="save()">Save results</button>
+    <div class="d-flex flex-row justify-content-end">
+      <input type="text" [(ngModel)]="description" class="m-2">
+      <button type="button" class="btn btn-sm btn-outline-info m-2" (click)="save()">Save schedule</button>
+    </div>
   </div>
 </div>
 <div class="d-flex flex-row m-2 justify-content-center">
-  <button *ngIf="activeIndex != 0" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=0">Edit jobs</button>
-  <button *ngIf="activeIndex != 1" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=1">Set objectives</button>
-  <button *ngIf="activeIndex != 2" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=2">Launch Optimization</button>
+  <button *ngIf="activeIndex != 0" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=0">Edit
+    jobs</button>
+  <button *ngIf="activeIndex != 1" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=1">Set
+    Prioerities</button>
+  <button *ngIf="activeIndex != 2" type="button" class="btn btn-sm btn-outline-primary m-2"
+    (click)="activeIndex=2">Launch Optimization</button>
 </div>
