--- a/src/app/scheduler/job-editor/job-editor.component.html
+++ b/src/app/scheduler/job-editor/job-editor.component.html
@@ -83,7 +83,7 @@
   <button *ngIf="activeIndex != 0" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=0">Edit
     jobs</button>
   <button *ngIf="activeIndex != 1" type="button" class="btn btn-sm btn-outline-primary m-2" (click)="activeIndex=1">Set
-    Prioerities</button>
+    Priorities</button>
   <button *ngIf="activeIndex != 2" type="button" class="btn btn-sm btn-outline-primary m-2"
     (click)="activeIndex=2">Launch Optimization</button>
 </div>
