--- a/src/app/scheduler/gantt-chart/gantt-chart.component.html
+++ b/src/app/scheduler/gantt-chart/gantt-chart.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex flex-row align-self-center">
   <div class="m-2">
-    <p-checkbox class="p-2" [(ngModel)]="showTooltip" binary="true"></p-checkbox>
+    <p-checkbox class="p-2" [(ngModel)]="showTooltip" binary="true" ngDefaultControl></p-checkbox>
     <span>Tooltip</span>
   </div>
   <div class="m-2">
-    <p-checkbox class="p-2" [(ngModel)]="fixYAxis" binary="true"></p-checkbox>
+    <p-checkbox class="p-2" [(ngModel)]="fixYAxis" binary="true" ngDefaultControl></p-checkbox>
     <span>Fix YAxis</span>
   </div>
   <div class="p-2">Current time: {{currentTime}} [min]</div>
@@ -14,7 +14,7 @@
     </label>
   </div>
   <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="reschedule()">Re-Schedule jobs</button>
-  <div class="btn-group btn-group-toggle p-2" ngbRadioGroup [(ngModel)]="ganttType">
+  <div class="btn-group btn-group-toggle p-2" ngbRadioGroup [(ngModel)]="ganttType" ngDefaultControl>
     <label class="btn-outline-success btn-sm" ngbButtonLabel>
       <input type="radio" ngbButton [value]="'MACHINE_ORIENTED'" (click)="gantTypeChanged('MACHINE_ORIENTED')"> Machine
       Oriented
