date support on xAxis

--- a/src/app/scheduler/gantt-chart/gantt-chart.component.html
+++ b/src/app/scheduler/gantt-chart/gantt-chart.component.html
@@ -7,7 +7,7 @@
     <p-checkbox class="p-2" [(ngModel)]="fixYAxis" binary="true" ngDefaultControl></p-checkbox>
     <span>Fix YAxis</span>
   </div>
-  <div class="p-2">Current time: {{currentTime}} [min]</div>
+  <div class="p-2">Current time: {{currentTime}}</div>
   <div class="btn-group btn-group-toggle p-2 ml-auto">
     <label class="btn-outline-primary btn-sm" ngbButtonLabel>
       <input type="checkbox" ngbButton [(ngModel)]="isSetCurrentTime"> Set current time
