hide ER diragram

--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -26,11 +26,11 @@
           <label *ngIf="canReadEntity(taskItemEntity)" ngbButtonLabel class="btn-outline-primary btn-sm">
             <input ngbButton type="radio" value="taskitem">Task item
           </label>
-          <label ngbButtonLabel class="btn-outline-primary btn-sm">
+          <!--label ngbButtonLabel class="btn-outline-primary btn-sm">
             <input ngbButton type="radio" value="erdiagram">ER Diagram
-          </label>
+          </label-->
           <label ngbButtonLabel class="btn-outline-primary btn-sm">
-            <input ngbButton type="radio" value="planner">Job Editor
+            <input ngbButton type="radio" value="planner">Planner
           </label>
           <label *ngIf="canReadEntity(scheduleEntity)" ngbButtonLabel class="btn-outline-primary btn-sm">
             <input ngbButton type="radio" value="schedule">Schedule
