--- a/src/app/scheduler/schedule-selector/schedule-selector.component.html
+++ b/src/app/scheduler/schedule-selector/schedule-selector.component.html
@@ -5,7 +5,7 @@
 </lib-crud-table-lib>
   
 <div class="d-flex justify-content-center">
-  <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="goJobEditor()">Show Job Editor</button>
+  <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="goPlanner()">Show Planner</button>
   <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="goGanttViewer()">Show Gantts</button>
   <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="goCalendarView()">Show Calendar</button>
 </div>
